--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
       window.mmTestMode = "#TESTMODE#";
     </script>
   </head>
-  <body>
+  <body class="spacex-bg nasa-bg-enabled">
+    <div id="bg-image-container">
+      <img id="bg-image-1" class="bg-image active" src="" alt="Background Image 1">
+      <img id="bg-image-2" class="bg-image" src="" alt="Background Image 2">
+      <div id="bg-blur-1" class="bg-blur active"></div>
+      <div id="bg-blur-2" class="bg-blur"></div>
+    </div>
     <div class="region fullscreen below"><div class="container"></div></div>
     <div class="region top bar">
       <div class="container"></div>
